Implemented professor dashboard functionalities